--- a/partials/_variables.scss
+++ b/partials/_variables.scss
@@ -1,21 +1,13 @@
 // colors
 
-$color-1: #3a393f; // dark purple 
-$color-2: #eeecf5; // light purple
-$color-3: #d26c64; // red
-$color-4: #ffffff; // white
-$background: darken($color-1, 5%); // body background color - visible when main element scales down
+$color-1: #1f4c74; // Blumine
+$color-2: #dab433; // Anzac
+$color-3: #f2f2f2; // Concrete
 
 // fonts 
 
-$primary-font: 'Ubuntu', sans-serif;
+$primary-font: 'Roboto', sans-serif;
 
-// z-index
+//animation duration
 
-$main-zindex: 1;
-$nav-zindex: 3;
-$shadow-zindex: 2;
-
-// nav
-
-$menu-items-number: 5;
+$animation-duration: 0.6s;
